[tool.poetry]
name = "pycounts_waleed"
version = "0.1.0"
description = "Calculates counts of words in a text file."
authors = ["Waleed Mahmood"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
